# CPP_CLR_Dispatch

./: .gitignore  CMakeLists.txt  CMakePresets.json  CSharpCMakeTest.sln  DeviceService.sln
CSharpCMakeTestCIL/: CMakeLists.txt  CSharpCMakeTestCIL.vcxproj
CSharpCMakeTestCIL/inc/: CMakeLists.txt
CSharpCMakeTestCIL/inc/CSharpCMakeTestCIL/: Observer.h  Service.h
CSharpCMakeTestCIL/src/: Observer.cpp  Service.cpp
CSharpCMakeTestGUI/: App.xaml  App.xaml.cs  CSharpCMakeTestGUI.csproj  MainWindow.xaml  MainWindow.xaml.cs
CSharpCMakeTestGUI/Services/: DeviceService.cs  ThreadSafeDeviceService.cs
CSharpCMakeTestGUI/ViewModels/: MainViewModel.cs
DeviceJsonSerializer/: DeviceJsonSerializer.vcxproj  DeviceJsonSerializer.vcxproj.filters  JsonSerializer.props
DeviceJsonSerializer/src/: JsonSerializer.cpp
DeviceLibrary/: DeviceLibrary.cpp  DeviceLibrary.props  DeviceLibrary.vcxproj  DeviceLibrary.vcxproj.filters  Serialize.cpp  Serialze.cpp
DeviceLibrary/src/: Type1Device.cpp  Type2Device.cpp
DeviceService/: CMakeLists.txt  DeviceService.props  DeviceService.vcxproj  DeviceService.vcxproj.filters  TestDeviceService.cpp  build.bat
DeviceService/inc/: CMakeLists.txt
DeviceService/inc/DeviceService/: Service.h
DeviceService/inc/DeviceService/Serialize/: Type1.h  Type2.h
DeviceService/inc/Devices/: IDevice.h  Type1Device.h  Type2Device.h
DeviceService/src/: CMakeLists.txt  Service.cpp  Type1Device.cpp  Type2Device.cpp
DeviceService/src/Serialize/: CMakeLists.txt  Type1.cpp  Type2.cpp
DeviceServiceCLR/: DeviceServiceCLR.vcxproj  DeviceServiceCLR.vcxproj.filters  ServiceCLR.cpp  ServiceCLR.h
DeviceServiceCSharp/: Device.cs  IDeviceService.cs
DeviceServiceConsole/: DeviceServiceConsole.cpp  DeviceServiceConsole.vcxproj  DeviceServiceConsole.vcxproj.filters
DeviceServiceGUI/: App.xaml.cs  DeviceServiceGUI.csproj
DeviceServiceGUI/ViewModels/: MainViewModel.cs
DeviceServiceInterface/: IDeviceService.cs  IDeviceServiceWrapper.cs  MessageService.cs  ThreadSafeService.cs
Serialize/: Serialize.vcxproj  Serialize.vcxproj.filters  Serializer.props
ServiceLibrary/: IServie.cs
nlohmann/: nlohmann.props
(+7 files in other folders)
